--- a/go/数组拼接为字符串.md
+++ b/go/数组拼接为字符串.md
@@ -14,7 +14,7 @@ LastEditTime: 2019-10-14 13:00:27
 2. `strings.join` 拼接 其次-推荐
 3. `buffers.NewBufferString` 拼接 最快，需要自己实现
 
-```golang
+```go
 package main
 
 import (
@@ -73,7 +73,7 @@ func buffer(wg *sync.WaitGroup, a []string) {
 ```
 
 结果：
-```
+```shell
 24
 join latency: 2.536645ms len: 488895
 buffer latency: 2.392455ms len: 488895
