--- a/elasticsearch/安装.md
+++ b/elasticsearch/安装.md
@@ -38,10 +38,10 @@ Java HotSpot(TM) 64-Bit Server VM warning: INFO: os::commit_memory(0x00000000853
 # /data/elasticsearch-5.2.2/hs_err_pid26945.log
 ```
 vim config/jvm.options
-```options
--Xms512m
--Xmx512m
-```
+
+-Xms/-Xmx 设置成同等大小
+
+-Xmx 不要超过内存的50%，不要超过30G
 
 ## 不能以root启动
 这个就新增一个用户
@@ -51,7 +51,7 @@ sudo su www
 ./elasticsearch/bin/elasticsearch
 ```
 
-# 安装
+# 插件
 下载[analysis-ik](https://github.com/medcl/elasticsearch-analysis-ik/releases)，注意要和es版本对应
 
 ```shell
