--- a/elasticsearch/安装.md
+++ b/elasticsearch/安装.md
@@ -1,5 +1,5 @@
 ---
-Title: elasticsearch在centos下的安装步骤,中文分词ik安装
+Title: elasticsearch在centos下的安装步骤
 Keywords: elasticsearch安装步骤,中文分词,ik
 Description: 记录一下elasticsearch安装步骤，方便以后有个思路
 Author: douyacun
@@ -11,7 +11,9 @@ LastEditTime: 2019-10-11 22:57:11
 
 [TOC]
 
-# 下载和安装步骤
+# elasticsearch 安装
+
+## 下载和安装步骤
 
 [官方文档](https://www.elastic.co/cn/downloads/elasticsearch)给出的安装步骤是比较详细的 
 
@@ -19,9 +21,9 @@ LastEditTime: 2019-10-11 22:57:11
 2. Linux运行 bin/elasticsearch Windows运行bin\elasticsearch.bat
 3. curl http://localhost:9200/
 
-# elasticsearch系统调优
 ## 文件描述符限制
 `/etc/security/limits.conf`
+
 ```conf
 *               soft    nofile          65536
 *               hard    nofile          65536
@@ -51,10 +53,39 @@ sudo su www
 ./elasticsearch/bin/elasticsearch
 ```
 
-# 插件
-下载[analysis-ik](https://github.com/medcl/elasticsearch-analysis-ik/releases)，注意要和es版本对应
+# 插件安装
+
+安装一个中文智能分词插件 [Smart Chinese Analysis plugin](https://www.elastic.co/guide/en/elasticsearch/plugins/current/analysis-smartcn.html#analysis-smartcn)
 
 ```shell
-./elasticsearch/bin/elasticsearch-plugin install file:///home/www/elasticsearch-analysis-ik-7.4.0.zip
+➜  elasticsearch-7.5.0 bin/elasticsearch-plugin install analysis-smartcn
+-> Downloading analysis-smartcn from elastic
+[=================================================] 100%
+-> Installed analysis-smartcn
+➜  elasticsearch-7.5.0 bin/elasticsearch-plugin list
+analysis-smartcn
 ```
-这里走的是本地file协议，和走http一样，GitHub访问超级慢，所以提前下载下来，本地file协议安装比较快
+
+# 多实例运行
+
+```shell
+bin/elasticsearch -E node.name=n1 -E cluster.name=douyacun -E path.data=n1_data -d
+bin/elasticsearch -E node.name=n2 -E cluster.name=douyacun -E path.data=n2_data -d
+bin/elasticsearch -E node.name=n3 -E cluster.name=douyacun -E path.data=n3_data -d
+```
+
+查看当前运行实例的情况	
+
+```shell
+➜  elasticsearch-7.5.0 curl -X GET http://127.0.0.1:9200/_cat/nodes
+127.0.0.1 13 91 7 2.61   dilm - n2
+127.0.0.1 16 91 7 2.61   dilm - n3
+127.0.0.1 28 91 7 2.61   dilm * n1
+```
+
+关闭已经运行的实例
+
+```shell
+ps|grep elastic|awk '{print  $1}'|xargs kill
+```
+
