定时同步：2019年12月17日 星期二 10时43分29秒 CST

--- a/elasticsearch/安装运行.md
+++ b/elasticsearch/安装运行.md
@@ -1,7 +1,7 @@
 ---
 Title: elasticsearch在centos下的安装步骤
 Keywords: elasticsearch安装步骤,中文分词,ik
-Description: 记录一下elasticsearch安装步骤，方便以后有个思路
+Description: docker运行es + kibana
 Author: douyacun
 Cover: 
 Label: elasticsearch安装
@@ -91,3 +91,63 @@ bin/elasticsearch -E node.name=n3 -E cluster.name=douyacun -E path.data=n3_data 
 ps|grep elastic|awk '{print  $1}'|xargs kill
 ```
 
+# docker 运行elastic search/kibana
+
+```shell
+$ docker pull elasticsearch:7.5.0
+$ vim docker-compose.yml
+
+version: '2.2'
+services:
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.5.0
+    container_name: kibana75
+    environment:
+      - I18N_LOCALE=zh-CN
+      - XPACK_GRAPH_ENABLED=true
+      - TIMELION_ENABLED=true
+      - XPACK_MONITORING_COLLECTION_ENABLED="true"
+    ports:
+      - "5601:5601"
+    networks:
+      - es75net
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.0
+    container_name: es75
+    environment:
+      - cluster.name=douyacun
+      - node.name=es75
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - discovery.seed_hosts=es75
+      - cluster.initial_master_nodes=es75
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - es75data1:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+    networks:
+      - es75net
+
+
+volumes:
+  es75data1:
+    driver: local
+
+networks:
+  es75net:
+    driver: bridge
+    
+$ docker-compose up
+```
+
+
+
+# 推荐阅读
+
+-   如何创建自己的 Docker Image - https://www.elastic.co/cn/blog/how-to-make-a-dockerfile-for-elasticsearch
+-   如何在为 Docker Image 安装 Elasticsearch 插件 - https://www.elastic.co/cn/blog/elasticsearch-docker-plugin-management
+-   如何设置 Docker 网络 - https://www.elastic.co/cn/blog/docker-networking
