--- a/elasticsearch/安装运行.md
+++ b/elasticsearch/安装运行.md
@@ -109,6 +109,15 @@ services:
       - "5601:5601"
     networks:
       - es75net
+  cerebro:
+    image: lmenezes/cerebro:latest
+    container_name: cerebro
+    ports:
+      - 9000:9000
+    command:
+      - -Dhosts.0.host=http://elasticsearch:9200
+    networks:
+      - es75net
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.5.0
     container_name: es75
