--- a/elasticsearch/安装运行.md
+++ b/elasticsearch/安装运行.md
@@ -97,6 +97,62 @@ $ vim docker-compose.yml
 
 version: '2.2'
 services:
+  es01:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.0
+    container_name: es01
+    environment:
+      - node.name=es01
+      - cluster.name=douyacun
+      - discovery.seed_hosts=es02,es03
+      - cluster.initial_master_nodes=es01,es02,es03
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - data01:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+    networks:
+      - elastic
+  es02:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.0
+    container_name: es02
+    environment:
+      - node.name=es02
+      - cluster.name=douyacun
+      - discovery.seed_hosts=es01,es03
+      - cluster.initial_master_nodes=es01,es02,es03
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - data02:/usr/share/elasticsearch/data
+    networks:
+      - elastic
+  es03:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.0
+    container_name: es03
+    environment:
+      - node.name=es03
+      - cluster.name=douyacun
+      - discovery.seed_hosts=es01,es02
+      - cluster.initial_master_nodes=es01,es02,es03
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - data03:/usr/share/elasticsearch/data
+    networks:
+      - elastic
   kibana:
     image: docker.elastic.co/kibana/kibana:7.5.0
     container_name: kibana75
@@ -105,53 +161,41 @@ services:
       - XPACK_GRAPH_ENABLED=true
       - TIMELION_ENABLED=true
       - XPACK_MONITORING_COLLECTION_ENABLED="true"
+      - ELASTICSEARCH_HOSTS=http://es01:9200
     ports:
       - "5601:5601"
     networks:
-      - es75net
+      - elastic
   cerebro:
     image: lmenezes/cerebro:latest
     container_name: cerebro
     ports:
       - 9000:9000
     command:
-      - -Dhosts.0.host=http://elasticsearch:9200
+      - -Dhosts.0.host=http://es01:9200
     networks:
-      - es75net
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.0
-    container_name: es75
-    environment:
-      - cluster.name=douyacun
-      - node.name=es75
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - discovery.seed_hosts=es75
-      - cluster.initial_master_nodes=es75
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - es75data1:/usr/share/elasticsearch/data
-    ports:
-      - 9200:9200
-    networks:
-      - es75net
-
-
+      - elastic 
 volumes:
-  es75data1:
+  data01:
+    driver: local
+  data02:
+    driver: local
+  data03:
     driver: local
 
 networks:
-  es75net:
+  elastic:
     driver: bridge
+
     
 $ docker-compose up
 ```
 
-
+- volumes: 容器删除以后数据不会影响，具体原理看一下docker官方的解释
+- es01、es02、es03、kibana、cerebro必须在同一个网络下边，不多解释
+- cerebro 设置elasticsearch网络：` -Dhosts.0.host=http://es01:9200`， 注意域名使用container_name
+- kibana 设置网络方式：``ELASTICSEARCH_HOSTS=http://es01:9200`，注意域名使用container_name
+- 最重要的来了，这里有3个es节点，要保证docker服务可以**内存分配4G以上**
 
 # 推荐阅读
 
