--- a/linux/页缓存.md
+++ b/linux/页缓存.md
@@ -63,9 +63,10 @@ mmap用于把文件映射到内存空间中，简单说mmap就是把一个文件
 - 写透缓存，写操作更新内存缓存，同时更新磁盘文件，可以保持缓存一致性
 - 回写，程序执行写操作直接将数据写入到缓存中，然后将被写入的页面标记为脏页，加入脏页链表中，[回写进程](/linux/页缓存.md#pdflush)会将脏页刷新到磁盘中,最终保持数据一致性
 
-# 缓存回收(pdflush)#pdflush
+# [缓存回收(pdflush)](#pdflush)
 缓存回收，清除页的数据，为更重要的数据提供坑位，收缩缓存大小减小内存压力
 linux回收策略：
+
 - LRU（最近最少使用）
 - 双链，分活跃链表/非活跃链表
 
