--- a/mysql/监控.md
+++ b/mysql/监控.md
@@ -1,2 +1,68 @@
 -   [Monitoring MySQL performance metrics](https://www.datadoghq.com/blog/monitoring-mysql-performance-metrics/)
 -   [mysql 官方文档: 5.1.10 Server Status Variables](https://dev.mysql.com/doc/refman/8.0/en/server-status-variables.html)
+
+
+
+```sql
+show global status;
+```
+
+-   Uptime：服务器已经运行的实际，单位秒
+-   Questions：已经发送给数据库查询数
+-   Com_select：查询次数，实际操作数据库的
+-   Com_insert：插入次数
+-   Com_delete：删除次数
+-   Com_update：更新次数
+-   Com_commit：事务次数
+-   Com_rollback：回滚次数
+
+# QPS
+
+Queries Per Second：每秒查询数，一台数据库每秒能够处理的查询次数
+
+```
+Questions = SHOW GLOBAL STATUS LIKE 'Questions'; 
+Uptime = SHOW GLOBAL STATUS LIKE 'Uptime'; 
+QPS = Questions/Uptime
+```
+
+脚本统计多长时间内的qps
+
+```shell
+MYSQL_CON="/usr/local/mysql/bin/mysql"
+# 统计间隔时间
+TIME="$1"
+# 第一次统计的数据库查询数
+OLD_QUERY=$MYSQL_CON -e "show global status like 'questions';" | awk -F[' ','s'] 'NR==2{print $3}'
+echo "$OLD_QUERY"
+sleep "$TIME"
+# 第二次统计的数据库查询数
+NEW_QUERY=$MYSQL_CON -e "show global status like 'questions';" | awk -F[' ','s'] 'NR==2{print $3}'
+echo "$NEW_QUERY"
+
+TIME_QUERY=expr $NEW_QUERY - $OLD_QUERY
+QPS=expr $TIME_QUERY / $TIME
+echo "$QPS"
+```
+
+# TPS
+
+Transactions Per Second：每秒处理事务数
+
+```
+Com_commit = SHOW GLOBAL STATUS LIKE 'Com_commit'; 
+Com_rollback = SHOW GLOBAL STATUS LIKE 'Com_rollback'; 
+Uptime = SHOW GLOBAL STATUS LIKE 'Uptime'; 
+TPS=(Com_commit + Com_rollback)/Uptime 
+```
+
+
+
+
+
+
+
+
+
+# 命中率
+
