--- a/golang/远程调试.md
+++ b/golang/远程调试.md
@@ -98,5 +98,31 @@ created by dyc/internal/module/chat.init.0
 	/root/github/api.douyacun.com/internal/module/chat/client.go:26 +0x82
 ```
 
-可以看出来是client为nil了，那就出现`hub.Wait()`,  调用epoll wait的时候返回的client有nil，
+可以看出来是client为nil了，那就出现`hub.Wait()`,  调用epoll wait的时候返回的client有nil，debug一下
+
+![](./assert/delve-debug.png)
+
+wait函数的代码:
+
+```go
+func (e *epoll) Wait() ([]*Client, error) {
+	events := make([]syscall.EpollEvent, 100)
+	n, err := syscall.EpollWait(e.Fd, events, 100)
+	if err != nil {
+		return nil, err
+	}
+	connections := make([]*Client, n)
+	for i := 0; i < n; i++ {
+		conn := e.connections[int(events[i].Fd)]
+		connections = append(connections, conn)
+	}
+	return connections, nil
+}
+```
+
+next一直运行，看一下有连接进来的情况:
+
+![](./assert/delve-debug-wait.png)
+
+这里应该是对`syscall.EpollWait` 第二个参数events， 第一个返回值n的理解有问题，但这不是关键，关键是远程调试姿势有了。
 
