--- a/algorithm/21. 合并两个有序链表.md
+++ b/algorithm/21. 合并两个有序链表.md
@@ -17,9 +17,8 @@ LastEditTime: 2020-04-29 13:25:00
 
 ### 解题思路
 
--   前提条件是有序
--   遍历链表，如果L1.Val <= L2.Val，Next指向L1，同时将L1指向L1.Next
--   头节点初始化
+-   有序
+-   链表拼接
 -   边界条件:
     -   L1 和 L2的长度未知
     -   如果L1长度 < L2长度，tmp.Next 拼接 剩余一条即可
