--- a/golang/20200505-golang面试整理.md
+++ b/golang/20200505-golang面试整理.md
@@ -18,13 +18,38 @@ goroutine是go的执行单位， channel是goroutine之间的通信机制
 - sync.WaitGroup
 - context.Context
 
+**Context用途**
+
+简化多个处理多个goroutine之间的请求域数据，取消信号，截止时间等相关操作
+
+
+
 ### 锁
 
 **互斥锁**: sync.Mutex
 
 **读写锁**: sync.RWMutext
 
-死锁: bing
+**map安全锁**：sync.map
+
+```go
+ type Map struct {
+    // 该锁用来保护dirty
+    mu Mutex
+    // 存读的数据，因为是atomic.value类型，只读类型，所以它的读是并发安全的
+    read atomic.Value // readOnly
+    //包含最新的写入的数据，并且在写的时候，会把read 中未被删除的数据拷贝到该dirty中，因为是普通的map存在并发安全问题，需要用到上面的mu字段。
+    dirty map[interface{}]*entry
+    // 从read读数据的时候，会将该字段+1，当等于len（dirty）的时候，会将dirty拷贝到read中（从而提升读的性能）。
+    misses int
+}
+```
+
+
+
+**死锁:**   两个线程互相申请对方持有的锁，但是又都不释放资源。 如何避免？在并发程序中，避免出现多个线程相互持有对方线程所需要的独占锁，
+
+
 
 **分布式锁**： 
 
@@ -60,4 +85,8 @@ CAP理论
 - 第一次标记(并发)
 - 第二次标记(STW)
 - 清除(并发)
+
+**Golang 里的逃逸分析是什么？**
+
+一个值被函数栈外引用，编译器就会从堆上分配内存
 
