--- a/architecture/高并发.md
+++ b/architecture/高并发.md
@@ -1,10 +1,10 @@
-### 高并发通用设计方法
-
+# 高并发
+通用设计方法
 - 分流
 - 缓存
 - 异步
 
-### 架构分层
+# 架构分层
 
 **为什么分层**
 - 简化系统设计，让不同的人专注某一层
@@ -25,7 +25,7 @@
 
 todo:各层功能界限不明确
 
-### 系统性能
+# 系统性能
 
 **高并发设计三大目标**
 - 高性能  
@@ -36,6 +36,7 @@ todo:各层功能界限不明确
 - 可扩展
    -  快速应对峰值流量
    
+## 高性能
 **性能优化原则**
 - 问题导向
 - 八二原则：20%精力解决80%的性能问题
@@ -64,9 +65,25 @@ todo:各层功能界限不明确
        - i/o
    - go pprof
    
-### 高可用
+## 高可用
 
 系统无故障运行的能力，系统可用行需要从系统设计和系统运维来保证
 
-**系统设计**
+### 系统设计
 系统设计时考虑如何自动化发现故障，出现故障如何解决。具体的优化方法故障转移、超时控制、限流
+
+**故障转移：**
+- 检测主备机器是否故障，心跳检测 ping，定时请求，一段时间没有响应，判定机器故障，报警并触发选主操作
+- nginx 异常重试
+```nignx
+proxy_next_upstream
+```
+
+ **超时控制：**
+
+不让请求一直保持，经过一段时间后让请求失败，释放资源
+
+内网服务 
+- 连接超时100 - 300ms
+- 读超时 1- 3s
+
