--- a/golang/20200505-golang面试整理.md
+++ b/golang/20200505-golang面试整理.md
@@ -6,6 +6,11 @@
 
 协程：用户态轻量级线程，调度由用户控制
 
+**goroutine和线程的区别**
+- 调度: os线程调度切换有cpu决定，go有自己的调度器，M:N调度可以将M个gouroutine绑定到N个os系统线程上
+- 内存: os线程的栈内存，一般是2M，goroutine的初始化栈内存是2kB，而且客扩展
+- 
+
 ### 并发模型
 
 不要用共享内存来通信，要用通信来共享内存
@@ -17,6 +22,9 @@ goroutine是go的执行单位， channel是goroutine之间的通信机制
 - 无缓冲channel
 - sync.WaitGroup
 - context.Context
+
+**限制goroutine并发数量**
+有缓冲channel
 
 ### 锁
 
