--- a/architecture/高并发：数据库扩展.md
+++ b/architecture/高并发：数据库扩展.md
@@ -15,7 +15,10 @@
 
 # 主从读写分离
 
+增加读的并发性能
+
 关键点：
+
 1. 主从复制
 2. 屏蔽主从分离带来的访问方式
 
@@ -30,4 +33,48 @@
 1. 数据冗余，在发送消息队列时发送全部数据
 2. 使用缓存，在写主库的同时写入到缓存中
 3. 最后查询主库
+
+### 屏蔽主从分离带来的访问方式
+
+1. 代码层处理
+2. 使用mysql中间件
+
+# 分库分表
+
+单表数据写入超过5千万，读写分离以后数据的查询性能和写入压力还是很大。这时就要考虑：
+
+1. 如何提升查询性能
+2. 如何让数据系统支持如此大的数据量
+3. 如何做到不同模块的故障隔离
+4. 如何处理更高并发写入能力
+
+### 垂直拆分
+
+对数据库竖着拆分，将数据库的表拆分到多个不同的数据库中去
+
+拆分的原则是：按照业务类型来拆分，核心思想：专库专用
+
+### 水平拆分
+
+将单一数据表按照某一种规则拆分到多个数据库和多个数据表中
+
+拆分规则:
+
+**hash值**  按某一个字段hash值拆分，然后取余
+
+​	比如：用户表拆分为16个库64张表，对16取余可以确定是在哪个库，对64取余可以确定是在哪张表
+
+**区间** 按某一字段拆分，比如时间
+
+**问题：**
+
+1. 引入了分库分表键，也叫做分区键，每次查询都要带上这个字段，只支持常量查询，如果是范围查询的话就需要遍历所有的表了
+
+答：如果是需要对登录名来查询用户时，对登录名作为分区键在做一次拆分，只包含登录名，密码和id，通过id做一次映射反查所有的数据
+
+2. join连表查询，count统计
+
+答：join连表查询就需要分开查询然后过滤了，count，单独存储在一张表中或者记录在 Redis 里面
+
+​	
 
