--- a/architecture/高并发：数据库扩展.md
+++ b/architecture/高并发：数据库扩展.md
@@ -78,3 +78,29 @@
 
 ​	
 
+# 主键唯一性
+
+### 关键点
+
+1. 唯一性
+2. 自增有序
+
+### Snowflake
+
+![](./assert/snowflake.jpeg)
+
+# nosql数据库
+
+如果单表数据超过千亿，分成64份的话，分隔成1024个库表的话，单表数据量还是在亿级别
+
+常见nosql库：
+
+- redis、memcache kv库
+- Hbase、Cassandra 列式存储数据库
+- MongoDB、CouchDB 文档数据库
+- Elasticsearch 倒排索引搜索库
+
+
+
+
+
