--- a/linux/负载高.md
+++ b/linux/负载高.md
@@ -234,14 +234,84 @@ procs -----------memory---------- ---swap-- -----io---- -system-- ------cpu-----
 - pidstat的8个stress进程，各占用每个CPU的50%
 - vmstat的 `r` 正在运行的进程队列是 8
 
+
+
+## 场景四：大量的上下文切换
+
+使用sysbench模拟大量的线程
+
+```
+$ sysbench --threads=10 --time=10 threads run
+```
+
+```
+top - 09:18:26 up 14 days, 42 min,  2 users,  load average: 2.58, 0.66, 1.30
+Tasks: 161 total,   1 running, 160 sleeping,   0 stopped,   0 zombie
+%Cpu(s): 16.2 us, 76.0 sy,  0.0 ni,  7.8 id,  0.0 wa,  0.0 hi,  0.1 si,  0.0 st
+KiB Mem :  7924044 total,  1689024 free,  5740484 used,   494536 buff/cache
+KiB Swap:  2097148 total,  1800444 free,   296704 used.  1734212 avail Mem
+
+  PID USER      PR  NI    VIRT    RES    SHR S  %CPU %MEM     TIME+ COMMAND
+ 7640 root      20   0   95116   3972   2824 S 351.5  0.1   1:41.20 sysbench
+```
+
+- 负载高
+- sy 内核态CPU高
+- sysbench 进程
+
+```
+$ vmstat -S M 3
+procs -----------memory---------- ---swap-- -----io---- -system-- ------cpu-----
+ r  b   swpd   free   buff  cache   si   so    bi    bo   in   cs us sy id wa st
+ 6  0    289   1649      0    482    0    0     1     3    8    1  2  1 97  0  0
+ 7  0    289   1649      0    482    0    0     0     1 23407 347642 14 76  9  0  0
+ 7  0    289   1648      0    482    0    0     0     0 21909 339189 16 76  8  0  0
+ 7  0    289   1649      0    482    0    0     0     0 23330 344468 16 75  9  0  0
+```
+
+- r: 运行队列高
+- in：中断高
+- cs：上下文切换次数高
+
+```
+$ pidstat -p 7640 -wt 3
+09时21分22秒   UID      TGID       TID   cswch/s nvcswch/s  Command
+09时21分25秒     0      7640         -      0.00      0.00  sysbench
+09时21分25秒     0         -      7640      0.00      0.00  |__sysbench
+09时21分25秒     0         -      7641   8870.00  23660.33  |__sysbench
+09时21分25秒     0         -      7642  10428.00  20367.67  |__sysbench
+09时21分25秒     0         -      7643  10766.67  19406.67  |__sysbench
+09时21分25秒     0         -      7644  10391.67  18603.00  |__sysbench
+09时21分25秒     0         -      7645  10480.00  21960.33  |__sysbench
+09时21分25秒     0         -      7646  10012.67  18224.00  |__sysbench
+09时21分25秒     0         -      7647   9655.00  18724.33  |__sysbench
+09时21分25秒     0         -      7648  10216.33  20583.00  |__sysbench
+09时21分25秒     0         -      7649  10317.67  20421.00  |__sysbench
+09时21分25秒     0         -      7650  10450.67  20246.67  |__sysbench
+```
+
+通过top知道负载高的原因
+
+- 内核态的运行导致
+
+vmstat定位负载高的原因：
+
+- 上下文切换高导致
+- 中断导致
+- 运行队列有等待运行进程
+
+pidstat定位负载高的原因：
+
+
+
+ 
+
 # 负载与参数
 
 分析
 
 - `usr`高的原因
 - `sys` 高的原因
-
-
 
 ## `usr` 较高的原因和处理方法
 
