--- a/linux/负载高.md
+++ b/linux/负载高.md
@@ -302,28 +302,25 @@ vmstat定位负载高的原因：
 
 pidstat定位负载高的原因：
 
-
-
- 
+- 可以看到sysbench 出来很多的子线程
 
 # 负载与参数
 
 分析
 
-- `usr`高的原因
-- `sys` 高的原因
+- CPU使用率高，如何定位进程和是进程的哪个函数导致的？
 
-## `usr` 较高的原因和处理方法
+## CPU使用率高，如何定位进程和是进程的哪个函数导致的？
+
+CPU使用率高定位是哪个进程，我们可以使用的工具有：
+
+- top/htop
+- pidstat
+- ps
+
+如何定位是进程的哪个函数导致的？
 
 
 
-## `sys` 较高的原因和处理方法
 
-可以发现sys较高,引起sys高的原因有:
-
-1. 大量的中断
-   - 软中断：内核需要为用户进程做事
-   - 硬中断：外设引起的
-2. 负载高，需要等待某些资源
-3. 上下文切换过于频繁
 
