--- a/linux/负载高.md
+++ b/linux/负载高.md
@@ -72,49 +72,46 @@ load average: 1.35, 2.37, 2.60
 
  - `-m`: 多少进程调用内存malloc/free(内存申请释放)
 
-    - `--vm-bytes B`  每个进程总计申请多少字节内存
+- `--vm-bytes B`  每个进程总计申请多少字节内存
 
-    - `--vm-stride B`  内存赋值时间隔多少字节
+- `--vm-stride B`  内存赋值时间隔多少字节
 
-      不断的给部分内存赋值，让 COW(Copy On Write)发生。只要指定了内存相关的选项，这个操作就会执行，只是大小为默认的 4096。赋值内存的比例由参数决定：
+  不断的给部分内存赋值，让 COW(Copy On Write)发生。只要指定了内存相关的选项，这个操作就会执行，只是大小为默认的 4096。赋值内存的比例由参数决定：
 
-      ```
-      for (i = 0; i < bytes; i += stride)
-          ptr[i] = 'Z';           /* Ensure that COW happens.  */
-      ```
+```
+for (i = 0; i < bytes; i += stride)
+ptr[i] = 'Z';           /* Ensure that COW happens.  */
+```
+bytes 为消耗的总内存大小，stride 为间隔。
+该参数会影响 CPU 状态 us 和 sy：
 
-      bytes 为消耗的总内存大小，stride 为间隔。
-      该参数会影响 CPU 状态 us 和 sy：
+- us: 用户空间占用CPU百分比
+- sy: 内核空间占用CPU百分比
 
-      - us: 用户空间占用CPU百分比
-      - sy: 内核空间占用CPU百分比
-
-      ```
+```
 $ stress --vm 2 --vm-bytes 500M --vm-stride 64
-      $ top
-      %Cpu(s): 21.3 us, 32.1 sy
-      ```
-      
-      ```
+$ top
+%Cpu(s): 21.3 us, 32.1 sy
+```
+
+```
 $ stress --vm 2 --vm-bytes 500M --vm-stride 1M
-      $ top
-      %Cpu(s):  0.7 us, 36.3 sy
-      ```
-      
-      --vm-stride 值增大就意味着减少赋值，用户空间占用CPU的比率就小了
+$ top
+%Cpu(s):  0.7 us, 36.3 sy
+```
 
-    - `--vm-hang N`: 每个消耗内存的进程在分配到内存后转入睡眠状态 N 秒，然后释放内存，一直重复执行这个过程, CPU空闲出来了，US就会降低了
+- `--vm-stride` 值增大就意味着减少赋值，用户空间占用CPU的比率就小了
+- `--vm-hang N`: 每个消耗内存的进程在分配到内存后转入睡眠状态 N 秒，然后释放内存，一直重复执行这个过程, CPU空闲出来了，US就会降低了
+- `--vm-keep`: 一直占用内存，区别于不断的释放和重新分配(默认是不断释放并重新分配内存)
 
-   - `--vm-keep`: 一直占用内存，区别于不断的释放和重新分配(默认是不断释放并重新分配内存)
+```
+$ stress --vm 2 --vm-bytes 500M --vm-keep
+%Cpu(s): 50.4 us,  0.3 sy
 
-     ```
-  $ stress --vm 2 --vm-bytes 500M --vm-keep
-     %Cpu(s): 50.4 us,  0.3 sy
-     
-     $ stress --vm 2 --vm-bytes 500M --vm-hang 5
-     %Cpu(s):  1.8 us,  7.8 sy
-     ```
-   
+$ stress --vm 2 --vm-bytes 500M --vm-hang 5
+%Cpu(s):  1.8 us,  7.8 sy
+```
+
 - `-d`: （`--hadd`） 产生 N 个不断执行 write 和 unlink 函数的进程(创建文件，写入内容，删除文件)
 
   - `--hadd-bytes B`  指定文件大小
