--- a/linux/负载高定位工具.md
+++ b/linux/负载高定位工具.md
@@ -395,5 +395,32 @@ options：
 - --file-merged-requests=N 合并IO请求 0（不合并）
 - --file-rw-ratio=N 读写比例 1.5 （2:1）
 
-# lsof
+# lsof(列出系统打开的工具)
+
+主要用途：查看进程打开的mysql连接，文件，网络连接等
+
+1. 普通文件
+2. 目录
+3. 网络文件系统的文件
+4. 字符或设备文件
+5. (函数)共享库
+6. 管道，命名管道
+7. 符号链接
+8. 网络文件（例如：NFS file、网络socket，unix域名socket）
+9. 还有其它类型的文件，等等
+
+**命令参数**
+
+- `-c <进程名>` 
+  - `losf -c mysqld`： 列出mysql进程打开的文件
+- `+d <目录>` 列出目录下被打开的文件
+  - `lsof +d /data/mysql` 列出 /data/mysql 目录下被打开的文件
+- `+D <目录>` 递归列出目录下被打开的文件
+- `-i <条件> ` 列出符合条件的进程 
+  - `lsof -i 4` / `lsof -i 6`：列出打开ipv4/ipv6网络的进程
+  - `lsof -i @<域名>`：列出与域名建立连接的进程
+  - `lsof -i :<端口>`：列出占用端口的进程
+  - `losf -i tcop -p 1969`: 列出1969进程建立的所有tcp连接
+- `-p <进程号>` 
+  - `lsof -p 1969` 列出 1969 进程 打开的文件
 
