负载定位工具

--- a/linux/负载高定位工具.md
+++ b/linux/负载高定位工具.md
@@ -62,7 +62,9 @@ KiB Swap:  2097148 total,  2095868 free,     1280 used.  2109988 avail Mem
 
 | PID    | USER     | PR                 | NI  |VIRT| RES |SHR|
 | ------ | -------- | ------------------ | ---- |---| ---|---|
-| 进程号 | 运行账号 | 优先级，越小越优先 |      |虚拟内存| 物理内存 |共享内存|
+| 进程号 | 运行用户 | 优先级，越小越优先 |      |虚拟内存| 物理内存 |共享内存|
+
+---
 
 | SHR      | S        | %CPU |%MEM|TIME+|COMMAND|
 | -------- | -------- | ---- |---|---|---|
