--- a/linux/负载高.md
+++ b/linux/负载高.md
@@ -1,5 +1,5 @@
 ---
-Title: 服务器负载高问题排查思路
+Title: 服务器CPU高问题排查思路
 Keywords: 负载高,问题排查,load average,CPU密集型,IO密集型
 Description: 借助stress、iostat、mpstat、pidstat定位负载高的进程
 Label: 高负载
@@ -9,38 +9,7 @@ LastEditTime: 2020-08-07 10:37:00
 
 [toc]
 
-# 负载
-
-#### 单核处理器
-"load average"的值越低，比如等于0.2或0.3，就说明电脑的工作量越小，系统负荷比较轻。
-
-系统负荷为1.0，意味着大桥的所有路段都有车，也就是说大桥已经"满"了。但是必须注意的是，直到此时大桥还是能顺畅通行的
-
-系统负荷为1.7，意味着车辆太多了，大桥已经被占满了（100%），后面等着上桥的车辆为桥面车辆的70%。
-
-CPU的系统负荷，基本上等同于上面的类比。大桥的通行能力，就是CPU的最大工作量；桥梁上的车辆，就是一个个等待CPU处理的进程（process）。
-
-#### 经验法则
-当系统负荷持续大于0.7，你必须开始调查了，问题出在哪里，防止情况恶化。
-
-当系统负荷持续大于1.0，你必须动手寻找解决办法，把这个值降下来。
-
-当系统负荷达到5.0，就表明你的系统有很严重的问题，长时间没有响应，或者接近死机了。你不应该让系统达到这个值。
-
-#### 多处理器
-2个CPU表明系统负荷可以达到2.0，此时每个CPU都达到100%的工作量。推广开来，n个CPU的电脑，可接受的系统负荷最大为n.0
-
-#### 工具
-
-```
-$ uptime
-11:21:21 up 9 days, 35 min,  5 users,  load average: 1.35, 2.37, 2.60
-
-$ top
-load average: 1.35, 2.37, 2.60
-```
-
-# 负载与CPU
+# CPU高的原因
 
 负载首先看的是top(htop也可以)，可以定位到是哪个进程（线上服务也不会运行多个服务的）
 
@@ -49,6 +18,37 @@ load average: 1.35, 2.37, 2.60
 - **CPU密集型进程**: 使用大量CPU会导致平均负载高，与平均负载一致
 - **I/O密集型**: 等待I/O也会导致平均负载升高，但是CPU使用率不一定很高
 - **上下文切换**: 大量的上下文切换也会导致CPU负载变高，此时CPU 使用率也会比较高
+  - 进程上下文切换
+    - 内核调度（优先级/时间片）
+    - 系统资源不足
+    - sleep
+    - 硬件中断
+  - 线程上下文切换
+  - 中断上下文切换
+
+# 负载
+
+**单核处理器**
+
+"load average"的值越低，比如等于0.2或0.3，就说明电脑的工作量越小，系统负荷比较轻。
+
+系统负荷为1.0，意味着大桥的所有路段都有车，也就是说大桥已经"满"了。但是必须注意的是，直到此时大桥还是能顺畅通行的
+
+系统负荷为1.7，意味着车辆太多了，大桥已经被占满了（100%），后面等着上桥的车辆为桥面车辆的70%。
+
+CPU的系统负荷，基本上等同于上面的类比。大桥的通行能力，就是CPU的最大工作量；桥梁上的车辆，就是一个个等待CPU处理的进程（process）。
+
+**经验法则**
+
+当系统负荷持续大于0.7，你必须开始调查了，问题出在哪里，防止情况恶化。
+
+当系统负荷持续大于1.0，你必须动手寻找解决办法，把这个值降下来。
+
+当系统负荷达到5.0，就表明你的系统有很严重的问题，长时间没有响应，或者接近死机了。你不应该让系统达到这个值。
+
+**多处理器**
+
+2个CPU表明系统负荷可以达到2.0，此时每个CPU都达到100%的工作量。推广开来，n个CPU的电脑，可接受的系统负荷最大为n.0
 
 ## 工具
 
