--- a/kong/重定向.md
+++ b/kong/重定向.md
@@ -1,7 +1,7 @@
 ---
 Title: "kong 302/301重定向，保住百度已收录的链接"
 Keywords: "kong,302,301,ningx_lua,域名重定向"
-Desctiption: "kong没有提供重定向的配置功能，唯一的插件也是需要企业版"
+Description: "kong没有提供重定向的配置功能，唯一的插件也是需要企业版"
 Lable: "kong 302"
 ---
 
