--- a/kong/日志收集.md
+++ b/kong/日志收集.md
@@ -60,13 +60,34 @@ http endpoint：接收日志的接口地址（此路由已经限制ip了）
 (Baiduspider|Googlebot|Googlebot|360Spider|Sogou|Bingbot)
 ```
 
-顺便贴一下go定义的结构体，只是取了一下我任务需要的数据
+顺便贴一下go定义的结构体，只是取了一下我认为需要的数据
 
 ```go
-
+type KongHttpLog struct {
+	Latencies struct {
+		Request json.Number `json:"request"`
+		Kong    json.Number `json:"kong"`
+		Proxy   json.Number `json:"proxy"`
+	} `json:"latencies"`
+	Request struct {
+		Querystring map[string]string `json:"querystring"`
+		Size        json.Number       `json:"size"`
+		Uri         string            `json:"uri"`
+		Url         string            `json:"url"`
+		Headers     map[string]string `json:"headers"`
+		Method      string            `json:"method"`
+	} `json:"request"`
+	ClientIp string  `json:"client_ip"`
+	Tries    []tries `json:"tries"`
+	Response struct {
+		Headers map[string]string `json:"headers"`
+		Status  json.Number       `json:"status"`
+		Size    json.Number       `json:"size"`
+	}
+	Spider string `json:"spider"`
+	Date   string `json:"date"`
+}
 ```
-
-
 
 #### ES 存储数据
 
@@ -97,3 +118,4 @@ http endpoint：接收日志的接口地址（此路由已经限制ip了）
 
 
 so: kong收集搜索引擎爬虫每日收录哪些网页的目的已经实现了
+
