--- a/kong/日志收集.md
+++ b/kong/日志收集.md
@@ -119,3 +119,7 @@ type KongHttpLog struct {
 
 so: kong收集搜索引擎爬虫每日收录哪些网页的目的已经实现了
 
+刚加完3个小时后，我就统计到了Google的访问全部500了～～～～，一万个草泥马
+
+![image-20210116213422686](assert/image-20210116213422686.png)
+
