--- a/elasticsearch/集群.md
+++ b/elasticsearch/集群.md
@@ -1,7 +1,7 @@
 ---
-Title: "es集群常用命令,证书命令"
+Title: "es集群,证书命令"
 Keywords: "es,证书,transport,ssl,xpack"
-Description: 博客es集群命令
+Description: "博客es集群命令"
 ---
 
 **ES初始化密码**
@@ -45,7 +45,7 @@ discovery.seed_hosts: ["116.196.69.34:9300"]
 cluster.initial_master_nodes: ["node-2"]
 ```
 
-**ES集群证书认证**
+**ES集群密码，证书配置**
 
 生成证书
 
@@ -54,7 +54,7 @@ cluster.initial_master_nodes: ["node-2"]
 ./bin/elasticsearch-certutil cert --ca elastic-stack-ca.p12
 ```
 
-配置
+配置，`elastic-certificates.p12` 必须放在`config`目录下面
 
 ```ini
 xpack.security.enabled: true
@@ -66,7 +66,12 @@ xpack.security.transport.ssl.truststore.path: elastic-certificates.p12
 
 https证书，通过nginx代理服务器配置就可以了，不建议es配置https证书
 
+**Kibana设置ES账户密码**
 
+```ini
+elasticsearch.username: "kibana"
+elasticsearch.password: "密码"
+```
 
 **完整配置**
 
