--- a/golang/限流.md
+++ b/golang/限流.md
@@ -1,12 +1,12 @@
 ---
-Title: "go time/rate限流实践"
+Title: "go time/rate 接口-账户/IP 限流"
 Keywords: "限流,time/rate,接口限流,账户限流,ip限流,token限流"
 Description: "1. 接口限流 2. 按账户/ip/token限流 3. 定时加载配置"
 Label: "rate limit"
 Cover: "assert/timeratecover@shukado_ukiyoe.jpeg"
 ---
 
-特点：
+需求：
 
 - 接口限流
 - 按账户/IP/Token限流
@@ -156,4 +156,9 @@ func (h *ApiAccountRateLimit) load() {
 	}
 }
 ```
+
+# 推荐阅读
+
+- go time/rate 限流 https://www.douyacun.com/article/f8f4e2bb806a6176e9c61dcaa0a4a6cc
+- Go可用性(三) 限流2: 令牌桶的实现 rate/limt https://lailin.xyz/post/go-training-week6-3-token-bucket-2.html
 
