--- a/golang/限流.md
+++ b/golang/限流.md
@@ -1,16 +1,25 @@
 ---
 Title: "go time/rate 接口-账户/IP 限流"
-Keywords: "限流,time/rate,接口限流,账户限流,ip限流,token限流"
+Keywords: "限流,time/rate,接口限流,账户限流,ip限流,token限流,gin"
 Description: "1. 接口限流 2. 按账户/ip/token限流 3. 定时加载配置"
 Label: "rate limit"
 Cover: "assert/timeratecover@shukado_ukiyoe.jpeg"
 ---
+
+背景：
+
+- gin框架，中间件
+- 博客开放好玩的 API
 
 需求：
 
 - 接口限流
 - 按账户/IP/Token限流
 - 定时加载配置
+
+todo:
+
+- 分布式限流
 
 # time/rate 原理
 
@@ -31,7 +40,7 @@ time/rate 是go提供的官方限流工具
 
 简化公式：
 
-当前可用令牌数，tokens := (now - last).Seconds() * limit 
+当前可用令牌数，tokens（当前可用令牌数） := (now (当前时间) - last(上一次消耗令牌的时间) ).Seconds() * limit(令牌/每秒)
 
 完整代码是：
 
@@ -75,7 +84,7 @@ func Every(interval time.Duration) Limit {
 }
 ```
 
-计算可用tokens的公式就更好理解了，用 (now (当前时间) - last(上一次消耗令牌的时间) ).Seconds() * limit 就是增量令牌数了
+计算可用tokens的公式就更好理解了，用  tokens（当前可用令牌数） := (now (当前时间) - last(上一次消耗令牌的时间) ).Seconds() * limit(令牌/每秒)
 
 # time/rate 改造
 
@@ -93,6 +102,7 @@ type ApiKeyRateLimit interface {
 	GetLimiter(api, key string) (limiter *Limiter, ok bool)
 }
 
+// API - UserId - rate.Limiter
 type ApiKeyRateLimitImpl struct {
 	hub map[string]map[string]*rate.Limiter
 }
@@ -130,11 +140,12 @@ func (h *ApiAccountRateLimit) Hook() gin.HandlerFunc {
 			ctx.JSON(http.StatusOK, gin.H{"code": http.StatusUnauthorized, "message": http.StatusText(http.StatusUnauthorized)})
 			ctx.Abort()
 		}
-    // 这里time/rat没有放出Advance，需要改一下
+    // 响应头：X-RateLimit-* 这里time/rat没有放出Advance，需要改一下
 		_, _, tokens := limiter.Advance(time.Now())
 		burst := limiter.Burst()
 		ctx.Header("X-RateLimit-Limit", strconv.Itoa(burst))
 		ctx.Header("X-RateLimit-Remaining", strconv.Itoa(int(tokens)))
+    
 		if !limiter.Allow() {
 			ctx.JSON(http.StatusOK, gin.H{"code": http.StatusTooManyRequests, "message": http.StatusText(http.StatusTooManyRequests)})
 			ctx.Abort()
@@ -144,6 +155,7 @@ func (h *ApiAccountRateLimit) Hook() gin.HandlerFunc {
 	}
 }
 
+// 定时加载配置
 func (h *ApiAccountRateLimit) load() {
 	ticker := time.NewTicker(5 * time.Minute)
 	for {
