--- a/about me/保密协议.md
+++ b/about me/保密协议.md
@@ -4,7 +4,7 @@
 
 甲方： 
 
-乙方： 刘宁（371202199405256338）
+乙方： ?（?）
 
 ​	甲乙双方拟开展[?系统维护]合作，为了积极促进双方在指定领域的业务开发与商务合作，经友好协商，甲乙双方同意向对方披露自身的保密信息，并签订如下协议（以下简称“本协议”）。
 
@@ -120,13 +120,13 @@
 
 3. 双方在本协议中填写的联系地址即为其有效的通讯地址。双方联系信息如下：
 
-收件人： 刘宁
+收件人： ?
 
-电话：15258157582
+电话：?
 
-电子邮件：douyacun@gmail.com
+电子邮件：?
 
-地址： 上海市浦东新区祝桥镇航城五路401弄101号201室
+地址： ?
 
 <center>3</center>
 
