--- a/tools/2023年2月去水印成果.md
+++ b/tools/2023年2月去水印成果.md
@@ -6,7 +6,7 @@ Description: "PDF去水印专业版"
 
 网站：[PDF去水印](https://www.douyacun.com/pdf/remove-watermark)
 
-微信小程序：扫描右侧二维码<img src="assert/gh_ef4d7d1f7966_258.jpeg" alt="gh_ef4d7d1f7966_258" style="zoom:33%;text-align:right" />
+微信小程序：扫描下方二维码<img src="assert/gh_ef4d7d1f7966_258.jpeg" alt="gh_ef4d7d1f7966_258" style="zoom:33%;text-align:right" />
 
 此类水印是常见的图片水印，水印是图片，后期添加到PDF上面去的。去除成功率较高。以下为常见案例：
 
@@ -14,28 +14,24 @@ Description: "PDF去水印专业版"
 
 pdf去水印：微信公众号：djky66 (顶尖考研祝您上岸)
 
-<center>
-<img src="https://mmbiz.qpic.cn/mmbiz_png/UvHibmDjAibQoEcThicJFFlFibDy0PuMoGeLYOdysqHKTUonXmj5kr4b9j40rECld2dd6bs3LgfOaZgxCibvLqwicXoA/0?wx_fmt=png" alt="微信公众号：djky66_顶尖考研祝您上岸-去水印前" style="zoom:33%;text-align:left;"/><img src="https://mmbiz.qpic.cn/mmbiz_png/UvHibmDjAibQoEcThicJFFlFibDy0PuMoGeLHriczWiacgoEEs0HovB6KUIhBwX61R4byEIOzFj8DiaibxpVRm2uhYicG4w/0?wx_fmt=png" alt="微信公众号：djky66_顶尖考研祝您上岸-去水印后" style="zoom:33%;text-align:right;"/>
-</center>
+<img src="assert/微信公众号：djky66_顶尖考研祝您上岸-去水印前.png" alt="微信公众号：djky66_顶尖考研祝您上岸-去水印前" style="zoom:33%;text-align:left;"/><img src="assert/微信公众号：djky66_顶尖考研祝您上岸-去水印后.png" alt="微信公众号：djky66_顶尖考研祝您上岸-去水印后" style="zoom:33%;text-align:right;"/>
+
 **案例2:**
 
 PDF去水印：华图教师
 
-<center>
-<img src="https://mmbiz.qpic.cn/mmbiz_png/UvHibmDjAibQoEcThicJFFlFibDy0PuMoGeLZQ6qllPMzpmMYBZe6YHWVDdwMDFEn2dcMWYfb4BjRTT8KWFT1Nr7JQ/0?wx_fmt=png" alt="华图教师-去水印前" style="zoom:25%;text-align:left" /><img src="https://mmbiz.qpic.cn/mmbiz_png/UvHibmDjAibQoEcThicJFFlFibDy0PuMoGeLUduhvKOooMFcZgy92CROliaaScN0LzeTlSydrRWtsWEI6lwYHR3tkicQ/0?wx_fmt=png" alt="华图教师-去水印后" style="zoom:25%;text-align:right;" />
-</center>
+<img src="assert/华图教师-去水印前.png" alt="华图教师-去水印前" style="zoom:25%;text-align:left" /><img src="assert/华图教师-去水印后.png" alt="华图教师-去水印后" style="zoom:25%;text-align:right;" />
+
 **案例3:**
 
 PDF去水印：夸克扫描王
-<center>
-<img src="https://mmbiz.qpic.cn/mmbiz_png/UvHibmDjAibQoEcThicJFFlFibDy0PuMoGeLAt5icTML6BuNMtNfyYxLBtaricxAXWj2st5dib9cKu9Y13kOmVSmvh2wQ/0?wx_fmt=png" alt="夸克扫描王-去水印前" style="zoom:33%;text-align:left" /><img src="https://mmbiz.qpic.cn/mmbiz_png/UvHibmDjAibQoEcThicJFFlFibDy0PuMoGeLJrHkoEHSTlPvA2GhXfvMDaVb1XBfeVIiams3tqqyoosoafiboe0r4ejw/0?wx_fmt=png" alt="夸克扫描王-去水印后" style="zoom:33%;" />
-</center>
+
+<img src="assert/夸克扫描王-去水印前.png" alt="夸克扫描王-去水印前" style="zoom:33%;text-align:left" /><img src="assert/夸克扫描王-去水印后.png" alt="夸克扫描王-去水印后" style="zoom:33%;" />
+
 
 
 **案例4:**
 
 PDF去水印：223网校
 
-<center>
-<img src="https://mmbiz.qpic.cn/mmbiz_png/UvHibmDjAibQoEcThicJFFlFibDy0PuMoGeLGdib47Lqscib4KC8DUXZgxHHV26mMHkVMIWpvXIz3sfnlzvwicPISs1zw/0?wx_fmt=png" alt="233网校-去水印前" style="zoom:25%;text-align:left" /><img src="https://mmbiz.qpic.cn/mmbiz_png/UvHibmDjAibQoEcThicJFFlFibDy0PuMoGeL2klcWzibeTYicrUb2uQ2JufPMkJXKgZFLXelHXhe1ZqQWKQmiaCf3IqbQ/0?wx_fmt=png" alt="233网校-去水印后" style="zoom:25%;" />
-</center>
+<img src="assert/233网校-去水印前.png" alt="233网校-去水印前" style="zoom:25%;text-align:left" /><img src="assert/233网校-去水印后.png" alt="233网校-去水印后" style="zoom:25%;" />
