--- a/tools/2023年2月去水印成果.md
+++ b/tools/2023年2月去水印成果.md
@@ -14,19 +14,22 @@ Description: "PDF去水印专业版"
 
 pdf去水印：微信公众号：djky66 (顶尖考研祝您上岸)
 
-<img src="assert/微信公众号：djky66_顶尖考研祝您上岸-去水印前.png" alt="微信公众号：djky66_顶尖考研祝您上岸-去水印前" style="zoom:33%;text-align:left;"/><img src="assert/微信公众号：djky66_顶尖考研祝您上岸-去水印后.png" alt="微信公众号：djky66_顶尖考研祝您上岸-去水印后" style="zoom:33%;text-align:right;"/>
+<img src="assert/微信公众号：djky66_顶尖考研祝您上岸-去水印前.png" alt="微信公众号：djky66_顶尖考研祝您上岸-去水印前" style="zoom:33%;text-align:left;"/>
+<img src="assert/微信公众号：djky66_顶尖考研祝您上岸-去水印后.png" alt="微信公众号：djky66_顶尖考研祝您上岸-去水印后" style="zoom:33%;text-align:right;"/>
 
 **案例2:**
 
 PDF去水印：华图教师
 
-<img src="assert/华图教师-去水印前.png" alt="华图教师-去水印前" style="zoom:25%;text-align:left" /><img src="assert/华图教师-去水印后.png" alt="华图教师-去水印后" style="zoom:25%;text-align:right;" />
+<img src="assert/华图教师-去水印前.png" alt="华图教师-去水印前" style="zoom:25%;text-align:left" />
+<img src="assert/华图教师-去水印后.png" alt="华图教师-去水印后" style="zoom:25%;text-align:right;" />
 
 **案例3:**
 
 PDF去水印：夸克扫描王
 
-<img src="assert/夸克扫描王-去水印前.png" alt="夸克扫描王-去水印前" style="zoom:33%;text-align:left" /><img src="assert/夸克扫描王-去水印后.png" alt="夸克扫描王-去水印后" style="zoom:33%;" />
+<img src="assert/夸克扫描王-去水印前.png" alt="夸克扫描王-去水印前" style="zoom:33%;text-align:left" />
+<img src="assert/夸克扫描王-去水印后.png" alt="夸克扫描王-去水印后" style="zoom:33%;" />
 
 
 
@@ -34,4 +37,5 @@ PDF去水印：夸克扫描王
 
 PDF去水印：223网校
 
-<img src="assert/233网校-去水印前.png" alt="233网校-去水印前" style="zoom:25%;text-align:left" /><img src="assert/233网校-去水印后.png" alt="233网校-去水印后" style="zoom:25%;" />
+<img src="assert/233网校-去水印前.png" alt="233网校-去水印前" style="zoom:25%;text-align:left" />
+<img src="assert/233网校-去水印后.png" alt="233网校-去水印后" style="zoom:25%;" />
